[package]
name = "input_gatherer"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", features = ["backend_libinput","backend_session_logind","backend_udev"], default-features = false}
input = { version = "0.5.0", features = ["udev"] }

[dev-dependencies]
keystroke_decoder = { version = "*", git = "https://github.com/Uniformbuffer3/keystroke_decoder", branch = "main" }
